# KnowledgeGraph

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: team_alpha.json
data/team-alpha/repos/order-service/: order_service.py
data/team-alpha/repos/payment-service/: __init__.py  constants.py  exceptions.py  payment_service.py  processors.py  pyproject.toml  refunds.py  utils.py
docs/: ARCHITECTURE.md  CYCLES.md  DEVELOPER.md  DOMAIN.md  PROGRESS.md
docs/cycles/: TEMPLATE.md  cycle1.md  cycle2.md  cycle3.md
scripts/: show_graph.py
src/: cli.py
src/crawlers/: repo_walker.py
src/enrichment/: embedder.py
src/parsers/: ast_parser.py
src/skills/: ollama_client.py
src/storage/: graph_store.py  vector_store.py
tests/: conftest.py
tests/integration/: test_graph_store_integration.py
tests/unit/: test_ast_parser.py  test_cli.py  test_edge_extraction.py  test_embedder.py  test_graph_store.py  test_ollama_client.py  test_repo_walker.py  test_vector_store.py
